@@ -69,6 +69,7 @@ Misc:
  - GB Video: Darken colors in GBA mode
  - FFmpeg: Support libswresample (fixes mgba.io/i/1120, mgba.io/b/123)
  - FFmpeg: Support lossless h.264 encoding
+ - Feature: Added loading savestates from command line
 
 0.6.3: (2017-04-14)
 Bugfixes:
